libycp/testsuite/tests/expressions/Bracket-typeerror.err
[Parser] tests/expressions/Bracket-typeerror.ycp:3 Bracket default to 'l' has wrong type
[Parser] tests/expressions/Bracket-typeerror.ycp:3 Expected 'term', seen 'list'.
Parsed:
----------------------------------------------------------------------
Parser error
----------------------------------------------------------------------
[Interpreter] tests/expressions/Bracket-typeerror.ycp:1 Parser error
