libycp/testsuite/tests/expressions/Bracket-typeerror.ycp
{
    list<term> l = [];
    return l[0]:[] == 1;	// this must fail, list contains terms, not lists
}
